--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react-icons": "^3.0.0",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1"
   }
 }
